2019-02-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Separate interval calculation / uncertainty propagation method choice
	  (from interval arithmetic for approximate functions and irrational 
	  numbers)
	* Enable interval arithmetic by default (CLI)
	* Relative uncertainty property for variables, units and data objects
	* Fixes for complex uncertainty propagation
	* Fix uncertainty propagation using variance formula with multiple
	  non-variable intervals (was calculated using interval arithmetic,
	  potentially after expansion)
	* Uncertainty function (absolute or relative uncertainty)
	* Line break in variable info value (CLI)
	* Show expression in function info (CLI)

2019-02-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Enable show ending zeroes by default

2019-02-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Disable CLI text formatting on Windows

2019-01-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Unformat variable value (fixes units with prefixes)
	* Improve plus-minus interval display
	* Fix conversion to constant when unit conversion fails
	* Fix optimal conversion to C
	* Fix find matching unit in some cases (when unit order differs)
	* Electronvolt units

2019-01-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* +/- syntax for non-numeric values
	* g (and not g/mol) is base unit for u

2019-01-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Only show 2 significant decimals (and equal amount of decimals for main value) 
	  for uncertainty of number with +/- display
	* Improve constants (including relations between physical constants)

2019-01-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* nounit() improvements

2019-01-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Calculate propagation of uncertainty using variance formula if interval arithmetic is deactivated
	* Fix randomly activated interval arithmetic (uninitialized variable)

2019-01-19 Hanna Knutsson <hanna.knutsson@protonmail.com>
